# ukb_loader

./: .gitignore  LICENSE  README.md  check_sd_icd.py  convert_all.py  load.py  load_test.py  preprocess.py  preprocess_test.py  run_preprocess.py  setup.cfg  split.py  split_test.py
examples/: load-phenotype-example.ipynb
src/ukb_loader/: __init__.py  all_dtypes.csv  bed.py  bed_test.py  convert_all.py  dtype_dict.py  load.py  load_test.py  preprocess.py  preprocess_test.py  split.py  split_test.py
