[metadata]
name = ukb_loader
version = 0.0.5
author = Aleksandr Medvedev
author_email = aleksandr.medvedev@skoltech.ru
description = Package for fast loading of UK Biobank phenotype and genotype datasets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alex-medvedev-msc/ukb_loader
project_urls =
    Bug Tracker = https://github.com/alex-medvedev-msc/ukb_loader/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.csv